# equivalence-verifier

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/discount/: bounded.py  new.py  old.py  strategies.py
examples/discount_tier/: bounded.py  new.py  old.py  strategies.py
examples/http_class/: bounded.py  new.py  old.py  strategies.py
examples/legacy_shard/: bounded.py  new.py  old.py  strategies.py
examples/sort_records/: bounded.py  new.py  old.py  strategies.py
scripts/: run_demo.py
src/verifier/: __init__.py  cli.py  comparator.py  fuzzer.py  loader.py  report.py  strategies.py  symbolic.py
tests/: test_demo_cases.py  test_fuzzer.py  test_report.py  test_symbolic.py
